# vt_generator

./: CMakeLists.txt  Readme.md  course_detection.py  dbm_opt.py  ego_ref_waypoint.csv  ego_ref_waypoint_lap_time.csv  ego_ref_waypoint_vel_smooth2.csv  icra2023_1_course_info.csv  path_optimizer.py
config/: path_optimizer.yaml
include/vt_generator/: cost.hpp  cost_direct.hpp  kbm.hpp  kbm_direct.hpp  problem.hpp  type.hpp  util.hpp  variable.hpp  vt_generator.hpp
include/vt_generator/csv/: csv_reader.hpp  csv_reader_opt_curvature.hpp  csv_writer.hpp  csv_writer_rmpc.hpp
include/vt_generator/path_smoother/: cost.hpp  cost_curv_ad.hpp  decoder.hpp  max_curvature.hpp  variable.hpp
include/vt_generator/rmpc/: rmpc.hpp
map/: exp20240422.yaml  exp20240424.yaml  exp20240507.yaml  icra2023_1.pgm  icra2023_1.yaml
src/: line_modifier.cpp  main.cpp  path_smooth.cpp  rmpc.cpp
